feat: add api get_friend_list

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -62,7 +62,7 @@
 
 | 进度  | 接口名称                     | 输入参数                                                     | 输出参数                                                                        | 备注                                                                                                                                          |
 | :---: | :--------------------------- | :----------------------------------------------------------- | :------------------------------------------------------------------------------ | :-------------------------------------------------------------------------------------------------------------------------------------------- |
-|   ×   | get_friend_list              | user_id, session_id                                          | count, [friend_user_id], status                                                 |                                                                                                                                               |
+|   √   | get_friend_list              | user_id, session_id                                          | count, [friend_user_id], status                                                 |                                                                                                                                               |
 |   ×   | get_user_list_by_email       | user_id, session_id, query_email                             | count, [user_id], status                                                        |                                                                                                                                               |
 |   ×   | get_user_list_by_user_name   | user_id, session_id, query_user_name                         | count, [user_id], status                                                        |                                                                                                                                               |
 |   ×   | add_friend                   | user_id, session_id, friend_user_id, apply_note, friend_note | status                                                                          | status= 成功发送请求 or 用户不存在 or 已是好友                                                                                                |
