feat: add api get_others_user_info

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -68,7 +68,7 @@
 |   ×   | add_friend                   | user_id, session_id, friend_user_id, apply_note, friend_note | status                                                                          | status= 成功发送请求 or 用户不存在 or 已是好友                                                                                                |
 |   ×   | remove_friend                | user_id, session_id, friend_user_id                          | status                                                                          |                                                                                                                                               |
 |   √   | set_friend_note              | user_id, session_id, friend_user_id, friend_note             | status                                                                          | friend_note 如果为空串则后端自动设为 friend_user_name                                                                                         |
-|   ×   | get_other_user_info          | user_id, session_id, other_user_id                           | user_id, user_name, email, gender, resident_city_id, comment, is_friend, status |                                                                                                                                               |
+|   √   | get_others_user_info         | user_id, session_id, other_user_id                           | user_id, user_name, email, gender, resident_city_id, comment, is_friend, status |                                                                                                                                               |
 |   √   | get_others_travel_group_list | user_id, session_id, other_user_id                           | count, [travel_group_id], status                                                |
 |   √   | get_travel_..._info          | user_id, session_id, travel_..._id                           | 输出同原始的 get_travel_..._info 方法                                           | 调用方法和自己的一样，只是 travel_..._id 可以不是自己的，后端已做权限处理，非自己的行程只读。自动返回可见范围的信息，若无法看到则返回错误代码 |
 |   √   | get_travel_list              | user_id, session_id, travel_group                            | count, [travel_id], status                                                      | 调用方法同上，自动返回可见范围的信息，若无法看到则返回空列表                                                                                  |
