--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -60,18 +60,19 @@
 
 ## 好友相关接口
 
-| 进度  | 接口名称                     | 输入参数                                                     | 输出参数                                                                        | 备注                                                                                                                                          |
-| :---: | :--------------------------- | :----------------------------------------------------------- | :------------------------------------------------------------------------------ | :-------------------------------------------------------------------------------------------------------------------------------------------- |
-|   √   | get_friend_list              | user_id, session_id                                          | count, [friend_user_id], status                                                 |                                                                                                                                               |
-|   ×   | get_user_list_by_email       | user_id, session_id, query_email                             | count, [user_id], status                                                        |                                                                                                                                               |
-|   ×   | get_user_list_by_user_name   | user_id, session_id, query_user_name                         | count, [user_id], status                                                        |                                                                                                                                               |
-|   ×   | add_friend                   | user_id, session_id, friend_user_id, apply_note, friend_note | status                                                                          | status= 成功发送请求 or 用户不存在 or 已是好友                                                                                                |
-|   ×   | remove_friend                | user_id, session_id, friend_user_id                          | status                                                                          |                                                                                                                                               |
-|   √   | set_friend_note              | user_id, session_id, friend_user_id, friend_note             | status                                                                          | friend_note 如果为空串则后端自动设为 friend_user_name                                                                                         |
-|   √   | get_others_user_info         | user_id, session_id, other_user_id                           | user_id, user_name, email, gender, resident_city_id, comment, is_friend, status |                                                                                                                                               |
-|   √   | get_others_travel_group_list | user_id, session_id, other_user_id                           | count, [travel_group_id], status                                                |
-|   √   | get_travel_..._info          | user_id, session_id, travel_..._id                           | 输出同原始的 get_travel_..._info 方法                                           | 调用方法和自己的一样，只是 travel_..._id 可以不是自己的，后端已做权限处理，非自己的行程只读。自动返回可见范围的信息，若无法看到则返回错误代码 |
-|   √   | get_travel_list              | user_id, session_id, travel_group                            | count, [travel_id], status                                                      | 调用方法同上，自动返回可见范围的信息，若无法看到则返回空列表                                                                                  |
+| 进度  | 接口名称                     | 输入参数                                                     | 输出参数                                                                                | 备注                                                                                                                                          |
+| :---: | :--------------------------- | :----------------------------------------------------------- | :-------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------- |
+|   ×   | get_user_list_by_email       | user_id, session_id, query_email                             | count, [user_id], status                                                                |                                                                                                                                               |
+|   ×   | get_user_list_by_user_name   | user_id, session_id, query_user_name                         | count, [user_id], status                                                                |                                                                                                                                               |
+|   ×   | add_friend                   | user_id, session_id, friend_user_id, apply_note, friend_note | status                                                                                  | status= 成功发送请求 or 用户不存在 or 已是好友                                                                                                |
+|   ×   | remove_friend                | user_id, session_id, friend_user_id                          | status                                                                                  |                                                                                                                                               |
+|   √   | get_friend_list              | user_id, session_id                                          | count, [friend_user_id], status                                                         |                                                                                                                                               |
+|   √   | set_friend_note              | user_id, session_id, friend_user_id, friend_note             | status                                                                                  | friend_note 如果为空串则后端自动设为 friend_user_name                                                                                         |
+|   √   | get_friend_user_info         | user_id, session_id, friend_user_id                          | user_id, user_name, friend_note, gender, resident_city_id, comment, friend_note, status |                                                                                                                                               |
+|   √   | get_others_user_info         | user_id, session_id, other_user_id                           | user_id, user_name, (friend_note,) gender, resident_city_id, comment, is_friend, status |                                                                                                                                               |
+|   √   | get_others_travel_group_list | user_id, session_id, other_user_id                           | count, [travel_group_id], status                                                        |
+|   √   | get_travel_..._info          | user_id, session_id, travel_..._id                           | 输出同原始的 get_travel_..._info 方法                                                   | 调用方法和自己的一样，只是 travel_..._id 可以不是自己的，后端已做权限处理，非自己的行程只读。自动返回可见范围的信息，若无法看到则返回错误代码 |
+|   √   | get_travel_list              | user_id, session_id, travel_group                            | count, [travel_id], status                                                              | 调用方法同上，自动返回可见范围的信息，若无法看到则返回空列表                                                                                  |
 + 注：get_user_id 设计给搜索添加好友时使用;有 user_id 后查看好友行程列表等功能也可以实现。
 
 ---
