doc: change signature of api for travel

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -37,7 +37,7 @@
 |   √   | remove_travel_group     | user_id, session_id, travel_group_id                                                           | status                                                           |                               |
 |   √   | get_travel_info         | user_id, session_id, travel_id                                                                 | city_id, date_start, date_end, visibility, travel_note, status   | date 格式 "yyyy-mm-dd"        |
 |   √   | set_travel_info         | user_id, session_id, travel_id, city_id, date_start, date_end, visibility, travel_note         | status                                                           |
-|   √   | add_travel              | user_id, session_id, travel_group_id                                                           | travel_id, status                                                |                               |
+|   √   | add_travel              | user_id, session_id, travel_group_id, city_id, date_start, date_end, visibility, travel_note   | travel_id, status                                                |                               |
 |   √   | remove_travel           | user_id, session_id, travel_group_id, travel_id                                                | status                                                           |                               |
 |   ×   | add_travel_company      | user_id, session_id, travel_id, friend_user_id                                                 | status                                                           |                               |
 |   ×   | get_travel_company_list | user_id, session_id, travel_id                                                                 | count, [friend_user_id], status                                  |                               |
