doc: checkout api doc from branch dev

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -26,22 +26,22 @@
 
 ## 旅行相关接口
 
-| 进度  | 接口名称                | 输入参数                                                                               | 输出参数                                                                     | 备注                          |
-| :---: | :---------------------- | :------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------- | :---------------------------- |
-|   √   | get_travel_group_list   | user_id, session_id                                                                    | count, [travel_group_id], status                                             |                               |
-|   √   | get_travel_list         | user_id, session_id, travel_group_id                                                   | count, [travel_id], status                                                   |                               |
-|   ×   | get_related_travel_list | user_id, session_id                                                                    | count, [travel_id], status                                                   | 返回所有关联了 user_id 的旅行 |
-|   √   | get_travel_group_info   | user_id, session_id, travel_group_id                                                   | travel_group_name, travel_group_note, travel_group_color, visibility, status | color 是6位 char              |
-|   √   | set_travel_group_info   | user_id, session_id, travel_group_id, travel_group_note                                | status                                                                       |                               |
-|   √   | add_travel_group        | user_id, session_id                                                                    | travel_group_id, status                                                      |                               |
-|   √   | remove_travel_group     | user_id, session_id, travel_group_id                                                   | status                                                                       |                               |
-|   √   | get_travel_info         | user_id, session_id, travel_id                                                         | city_id, date_start, date_end, visibility, travel_note, status               | date 格式 "yyyy-mm-dd"        |
-|   √   | set_travel_info         | user_id, session_id, travel_id, city_id, date_start, date_end, visibility, travel_note | status                                                                       |
-|   √   | add_travel              | user_id, session_id, travel_group_id                                                   | travel_id, status                                                            |                               |
-|   √   | remove_travel           | user_id, session_id, travel_group_id, travel_id                                        | status                                                                       |                               |
-|   ×   | add_travel_company      | user_id, session_id, travel_id, friend_user_id                                         | status                                                                       |                               |
-|   ×   | get_travel_company_list | user_id, session_id, travel_id                                                         | count, [friend_user_id], status                                              |                               |
-|   ×   | remove_travel_company   | user_id, session_id, travel_id, friend_user_id                                         | status                                                                       |                               |
+| 进度  | 接口名称                | 输入参数                                                                                       | 输出参数                                                         | 备注                          |
+| :---: | :---------------------- | :--------------------------------------------------------------------------------------------- | :--------------------------------------------------------------- | :---------------------------- |
+|   √   | get_travel_group_list   | user_id, session_id                                                                            | count, [travel_group_id], status                                 |                               |
+|   √   | get_travel_list         | user_id, session_id, travel_group_id                                                           | count, [travel_id], status                                       |                               |
+|   ×   | get_related_travel_list | user_id, session_id                                                                            | count, [travel_id], status                                       | 返回所有关联了 user_id 的旅行 |
+|   √   | get_travel_group_info   | user_id, session_id, travel_group_id                                                           | travel_group_name, travel_group_note, travel_group_color, status | color 是 7 位 char (#FFFFFF)  |
+|   √   | set_travel_group_info   | user_id, session_id, travel_group_id, travel_group_name, travel_group_note, travel_group_color | status                                                           |                               |
+|   √   | add_travel_group        | user_id, session_id, travel_group_name, travel_group_note, travel_group_color                  | travel_group_id, status                                          |                               |
+|   √   | remove_travel_group     | user_id, session_id, travel_group_id                                                           | status                                                           |                               |
+|   √   | get_travel_info         | user_id, session_id, travel_id                                                                 | city_id, date_start, date_end, visibility, travel_note, status   | date 格式 "yyyy-mm-dd"        |
+|   √   | set_travel_info         | user_id, session_id, travel_id, city_id, date_start, date_end, visibility, travel_note         | status                                                           |
+|   √   | add_travel              | user_id, session_id, travel_group_id, city_id, date_start, date_end, visibility, travel_note   | travel_id, status                                                |                               |
+|   √   | remove_travel           | user_id, session_id, travel_group_id, travel_id                                                | status                                                           |                               |
+|   ×   | add_travel_company      | user_id, session_id, travel_id, friend_user_id                                                 | status                                                           |                               |
+|   ×   | get_travel_company_list | user_id, session_id, travel_id                                                                 | count, [friend_user_id], status                                  |                               |
+|   ×   | remove_travel_company   | user_id, session_id, travel_id, friend_user_id                                                 | status                                                           |                               |
 + 注：这里的接口设计逻辑是只允许添加空的 travel_group 和空的 travel，返回一个有效的 travel_group_id 和 travel_id，再进行设置参数
 
 ---
