doc: add api move_travel

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -39,6 +39,7 @@
 |   √   | set_travel_info         | user_id, session_id, travel_id, city_id, date_start, date_end, visibility, travel_note         | status                                                           | 修改 travel 会自动通知关联好友                                            |
 |   √   | add_travel              | user_id, session_id, travel_group_id, city_id, date_start, date_end, visibility, travel_note   | travel_id, status                                                |                                                                           |
 |   √   | remove_travel           | user_id, session_id, travel_group_id, travel_id                                                | status                                                           | 删除 travel 会自动通知关联好友                                            |
+|   ×   | move_travel             | user_id, session_id, travel_group_id, travel_id, new_travel_group_id                           | status                                                           |                                                                           |
 |   ×   | add_travel_company      | user_id, session_id, travel_id, friend_user_id                                                 | status                                                           | 向好友发送邀请请求                                                        |
 |   ×   | get_travel_company_list | user_id, session_id, travel_id                                                                 | count, [friend_user_id], status                                  |                                                                           |
 |   ×   | remove_travel_company   | user_id, session_id, travel_id, friend_user_id                                                 | status                                                           |                                                                           |
