feat: add api address_to_city_list

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -52,9 +52,9 @@
 
 | 进度  | 接口名称             | 输入参数            | 输出参数                                                                              | 备注                                                                      |
 | :---: | :------------------- | :------------------ | :------------------------------------------------------------------------------------ | :------------------------------------------------------------------------ |
-|   √   | gps_to_city          | latitude, longitude | city_id, country_name, province_name, city_name, latitude, longitude, status          | 如果不存在则报错                                                          |
-|   ×   | address_to_city_list | address             | count, [city_id, country_name, province_name, city_name, latitude, longitude], status | address 是模糊地址字符串，交由 API 处理，返回列表可能为空                 |
 |   √   | address_to_city      | address             | city_id, country_name, province_name, city_name, latitude, longitude, status          | address 是模糊地址字符串，交由 API 处理，返回第一个结果，如果不存在则报错 |
+|   √   | address_to_city_list | address             | count, [city_id, country_name, province_name, city_name, latitude, longitude], status | address 是模糊地址字符串，交由 API 处理，返回列表可能为空                 |
+|   √   | gps_to_city          | latitude, longitude | city_id, country_name, province_name, city_name, latitude, longitude, status          | 如果不存在则报错                                                          |
 |   √   | city_id_to_city      | city_id             | status, country_name, province_name, city_name, latitude, longitude                   | 如果不存在则报错                                                          |
 + 注：保留国家信息，方便前端区分
 
