--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -27,25 +27,26 @@
 
 ## 旅行相关接口
 
-| 进度  | 接口名称                   | 输入参数                                                                                       | 输出参数                                                                                                           | 备注                                                                      |
-| :---: | :------------------------- | :--------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------ |
-|   √   | get_travel_group_list      | user_id, session_id                                                                            | count, [travel_group_list], status                                                                                 | travel_group_list 内含 travel_group_id                                    |
-|   √   | get_travel_group_info_list | user_id, session_id                                                                            | count, [travel_group_info_list: {owner_user_id, travel_group_name, travel_group_note, travel_group_color}], status | color 是 7 位 char (#FFFFFF)                                              |
-|   √   | get_travel_group_info      | user_id, session_id, travel_group_id                                                           | owner_user_id, travel_group_name, travel_group_note, travel_group_color, status                                    | color 是 7 位 char (#FFFFFF)                                              |
-|   √   | set_travel_group_info      | user_id, session_id, travel_group_id, travel_group_name, travel_group_note, travel_group_color | status                                                                                                             |                                                                           |
-|   √   | get_travel_list            | user_id, session_id, travel_group_id                                                           | count, [travel_list], status                                                                                       | travel_list 内含 travel_id                                                |
-|   ×   | get_related_travel_list    | user_id, session_id                                                                            | count, [travel_list], status                                                                                       | 返回所有关联了 user_id 的旅行, travel_list 内含 travel_id                 |
-|   √   | get_travel_info_list       | user_id, session_id, travel_group_id                                                           | count, [travel_info_list: {travel_id, city_id, date_start, date_end, visibility, travel_note}], status             |                                                                           |
-|   √   | get_travel_info            | user_id, session_id, travel_id                                                                 | city_id, date_start, date_end, visibility, travel_note, status                                                     | date 格式 "yyyy-mm-dd"                                                    |
-|   √   | set_travel_info            | user_id, session_id, travel_id, city_id, date_start, date_end, visibility, travel_note         | status                                                                                                             | 修改 travel 会自动通知关联好友                                            |
-|   √   | add_travel_group           | user_id, session_id, travel_group_name, travel_group_note, travel_group_color                  | travel_group_id, status                                                                                            |                                                                           |
-|   √   | remove_travel_group        | user_id, session_id, travel_group_id                                                           | status                                                                                                             | 一并删除 travel group 内的所有 travel, 删除每个 travel 会自动通知关联好友 |
-|   √   | add_travel                 | user_id, session_id, travel_group_id, city_id, date_start, date_end, visibility, travel_note   | travel_id, status                                                                                                  |                                                                           |
-|   √   | remove_travel              | user_id, session_id, travel_group_id, travel_id                                                | status                                                                                                             | 删除 travel 会自动通知关联好友                                            |
-|   √   | move_travel                | user_id, session_id, travel_group_id, travel_id, other_travel_group_id                         | status                                                                                                             |                                                                           |
-|   ×   | add_travel_company         | user_id, session_id, travel_id, friend_user_id                                                 | status                                                                                                             | 向好友发送邀请请求                                                        |
-|   ×   | get_travel_company_list    | user_id, session_id, travel_id                                                                 | count, [company_list], status                                                                                      | company_list 内含好友 user_id                                             |
-|   ×   | remove_travel_company      | user_id, session_id, travel_id, friend_user_id                                                 | status                                                                                                             |                                                                           |
+| 进度  | 接口名称                     | 输入参数                                                                                       | 输出参数                                                                                                                                                    | 备注                                                                      |
+| :---: | :--------------------------- | :--------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------ |
+|   √   | get_all_travel_group_details | user_id, session_id                                                                            | count, [travel_group_info_list: {owner_user_id, travel_group_name, travel_group_note, travel_group_color, travel_infos: {count, travel_info_list}}], status | color 是 7 位 char (#FFFFFF)                                              |
+|   √   | get_travel_group_list        | user_id, session_id                                                                            | count, [travel_group_list], status                                                                                                                          | travel_group_list 内含 travel_group_id                                    |
+|   √   | get_travel_group_info_list   | user_id, session_id                                                                            | count, [travel_group_info_list: {owner_user_id, travel_group_name, travel_group_note, travel_group_color}], status                                          | color 是 7 位 char (#FFFFFF)                                              |
+|   √   | get_travel_group_info        | user_id, session_id, travel_group_id                                                           | owner_user_id, travel_group_name, travel_group_note, travel_group_color, status                                                                             | color 是 7 位 char (#FFFFFF)                                              |
+|   √   | set_travel_group_info        | user_id, session_id, travel_group_id, travel_group_name, travel_group_note, travel_group_color | status                                                                                                                                                      |                                                                           |
+|   √   | get_travel_list              | user_id, session_id, travel_group_id                                                           | count, [travel_list], status                                                                                                                                | travel_list 内含 travel_id                                                |
+|   ×   | get_related_travel_list      | user_id, session_id                                                                            | count, [travel_list], status                                                                                                                                | 返回所有关联了 user_id 的旅行, travel_list 内含 travel_id                 |
+|   √   | get_travel_info_list         | user_id, session_id, travel_group_id                                                           | count, [travel_info_list: {travel_id, city_id, date_start, date_end, visibility, travel_note}], status                                                      |                                                                           |
+|   √   | get_travel_info              | user_id, session_id, travel_id                                                                 | city_id, date_start, date_end, visibility, travel_note, status                                                                                              | date 格式 "yyyy-mm-dd"                                                    |
+|   √   | set_travel_info              | user_id, session_id, travel_id, city_id, date_start, date_end, visibility, travel_note         | status                                                                                                                                                      | 修改 travel 会自动通知关联好友                                            |
+|   √   | add_travel_group             | user_id, session_id, travel_group_name, travel_group_note, travel_group_color                  | travel_group_id, status                                                                                                                                     |                                                                           |
+|   √   | remove_travel_group          | user_id, session_id, travel_group_id                                                           | status                                                                                                                                                      | 一并删除 travel group 内的所有 travel, 删除每个 travel 会自动通知关联好友 |
+|   √   | add_travel                   | user_id, session_id, travel_group_id, city_id, date_start, date_end, visibility, travel_note   | travel_id, status                                                                                                                                           |                                                                           |
+|   √   | remove_travel                | user_id, session_id, travel_group_id, travel_id                                                | status                                                                                                                                                      | 删除 travel 会自动通知关联好友                                            |
+|   √   | move_travel                  | user_id, session_id, travel_group_id, travel_id, other_travel_group_id                         | status                                                                                                                                                      |                                                                           |
+|   ×   | add_travel_company           | user_id, session_id, travel_id, friend_user_id                                                 | status                                                                                                                                                      | 向好友发送邀请请求                                                        |
+|   ×   | get_travel_company_list      | user_id, session_id, travel_id                                                                 | count, [company_list], status                                                                                                                               | company_list 内含好友 user_id                                             |
+|   ×   | remove_travel_company        | user_id, session_id, travel_id, friend_user_id                                                 | status                                                                                                                                                      |                                                                           |
 + 注：这里的接口设计逻辑是只允许添加空的 travel_group 和空的 travel，返回一个有效的 travel_group_id 和 travel_id，再进行设置参数
 
 ---
@@ -64,22 +65,23 @@
 
 ## 好友相关接口
 
-| 进度  | 接口名称                          | 输入参数                                         | 输出参数                                                                                            | 备注                                                                                                                                          |
-| :---: | :-------------------------------- | :----------------------------------------------- | :-------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------- |
-|   ×   | get_user_list_by_email            | user_id, session_id, query_email                 | count, [user_list], status                                                                          | user_list 内含 user_id                                                                                                                        |
-|   ×   | get_user_list_by_user_name        | user_id, session_id, query_user_name             | count, [user_list], status                                                                          | user_list 内含 user_id                                                                                                                        |
-|   ×   | add_friend                        | user_id, session_id, friend_user_id, friend_note | status                                                                                              | friend_note 如果为空串则后端自动设为 friend_user_name, status = 成功添加 or 用户不存在 or 已是好友                                            |
-|   ×   | send_friend_request               | user_id, session_id, friend_user_id, msg_content | status                                                                                              | status = 成功发送请求 or 用户不存在 or 已是好友                                                                                               |
-|   ×   | remove_friend                     | user_id, session_id, friend_user_id              | status                                                                                              | 删除会自动删除双方 travel 的关联                                                                                                              |
-|   √   | get_friend_list                   | user_id, session_id                              | count, [friend_list], status                                                                        | friend_list 内含好友 user_id                                                                                                                  |
-|   √   | set_friend_note                   | user_id, session_id, friend_user_id, friend_note | status                                                                                              | friend_note 如果为空串则后端自动设为 friend_user_name                                                                                         |
-|   √   | get_friend_user_info              | user_id, session_id, friend_user_id              | user_id, user_name, gender, resident_city_id, comment, avatar_url, friend_note, status              |                                                                                                                                               |
-|   √   | get_others_user_info              | user_id, session_id, other_user_id               | user_id, user_name, (friend_note,) gender, resident_city_id, avatar_url, comment, is_friend, status |                                                                                                                                               |
-|   √   | get_others_travel_group_list      | user_id, session_id, other_user_id               | count, [travel_group_list], status                                                                  | 只返回内部有可见 travel 的 travel group, travel_group_list 内含 travel_group_id                                                               |
-|   √   | get_others_travel_group_info_list | user_id, session_id, other_user_id               | count, [travel_group_info_list: {travel_group_id, owner_user_id, ...}], status                      | 只返回内部有可见 travel 的 travel group                                                                                                       |
-|   √   | get_travel_..._info               | user_id, session_id, travel_..._id               | 输出同原始的 get_travel_..._info 方法                                                               | 调用方法和自己的一样，只是 travel_..._id 可以不是自己的，后端已做权限处理，非自己的行程只读。自动返回可见范围的信息，若无法看到则返回错误代码 |
-|   √   | get_travel_..._info_list          | user_id, session_id, travel_..._id               | 输出同原始的 get_travel_..._info_list 方法                                                          | 调用方法和自己的一样，只是 travel_..._id 可以不是自己的，后端已做权限处理，非自己的行程只读。自动返回可见范围的信息，若无法看到则返回错误代码 |
-|   √   | get_travel_list                   | user_id, session_id, travel_group                | count, [travel_list], status                                                                        | 调用方法同上，自动返回可见范围的信息，若无法看到则返回空列表, travel_list 内含 travel_id                                                      |
+| 进度  | 接口名称                            | 输入参数                                         | 输出参数                                                                                                                                                    | 备注                                                                                                                                          |
+| :---: | :---------------------------------- | :----------------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------- |
+|   ×   | get_user_list_by_email              | user_id, session_id, query_email                 | count, [user_list], status                                                                                                                                  | user_list 内含 user_id                                                                                                                        |
+|   ×   | get_user_list_by_user_name          | user_id, session_id, query_user_name             | count, [user_list], status                                                                                                                                  | user_list 内含 user_id                                                                                                                        |
+|   ×   | add_friend                          | user_id, session_id, friend_user_id, friend_note | status                                                                                                                                                      | friend_note 如果为空串则后端自动设为 friend_user_name, status = 成功添加 or 用户不存在 or 已是好友                                            |
+|   ×   | send_friend_request                 | user_id, session_id, friend_user_id, msg_content | status                                                                                                                                                      | status = 成功发送请求 or 用户不存在 or 已是好友                                                                                               |
+|   ×   | remove_friend                       | user_id, session_id, friend_user_id              | status                                                                                                                                                      | 删除会自动删除双方 travel 的关联                                                                                                              |
+|   √   | get_friend_list                     | user_id, session_id                              | count, [friend_list], status                                                                                                                                | friend_list 内含好友 user_id                                                                                                                  |
+|   √   | set_friend_note                     | user_id, session_id, friend_user_id, friend_note | status                                                                                                                                                      | friend_note 如果为空串则后端自动设为 friend_user_name                                                                                         |
+|   √   | get_friend_user_info                | user_id, session_id, friend_user_id              | user_id, user_name, gender, resident_city_id, comment, avatar_url, friend_note, status                                                                      |                                                                                                                                               |
+|   √   | get_others_user_info                | user_id, session_id, other_user_id               | user_id, user_name, (friend_note,) gender, resident_city_id, avatar_url, comment, is_friend, status                                                         |                                                                                                                                               |
+|   √   | get_others_all_travel_group_details | user_id, session_id                              | count, [travel_group_info_list: {owner_user_id, travel_group_name, travel_group_note, travel_group_color, travel_infos: {count, travel_info_list}}], status | color 是 7 位 char (#FFFFFF)                                                                                                                  |
+|   √   | get_others_travel_group_list        | user_id, session_id, other_user_id               | count, [travel_group_list], status                                                                                                                          | 只返回内部有可见 travel 的 travel group, travel_group_list 内含 travel_group_id                                                               |
+|   √   | get_others_travel_group_info_list   | user_id, session_id, other_user_id               | count, [travel_group_info_list: {travel_group_id, owner_user_id, ...}], status                                                                              | 只返回内部有可见 travel 的 travel group                                                                                                       |
+|   √   | get_travel_..._info                 | user_id, session_id, travel_..._id               | 输出同原始的 get_travel_..._info 方法                                                                                                                       | 调用方法和自己的一样，只是 travel_..._id 可以不是自己的，后端已做权限处理，非自己的行程只读。自动返回可见范围的信息，若无法看到则返回错误代码 |
+|   √   | get_travel_..._info_list            | user_id, session_id, travel_..._id               | 输出同原始的 get_travel_..._info_list 方法                                                                                                                  | 调用方法和自己的一样，只是 travel_..._id 可以不是自己的，后端已做权限处理，非自己的行程只读。自动返回可见范围的信息，若无法看到则返回错误代码 |
+|   √   | get_travel_list                     | user_id, session_id, travel_group                | count, [travel_list], status                                                                                                                                | 调用方法同上，自动返回可见范围的信息，若无法看到则返回空列表, travel_list 内含 travel_id                                                      |
 + 注：get_user_id 设计给搜索添加好友时使用;有 user_id 后查看好友行程列表等功能也可以实现。
 
 ---
