feat: add api add_friend remove_friend

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -69,9 +69,9 @@
 | :---: | :---------------------------------- | :----------------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------- |
 |   ×   | get_user_list_by_email              | user_id, session_id, query_email                 | count, [user_list], status                                                                                                                                  | user_list 内含 user_id                                                                                                                        |
 |   ×   | get_user_list_by_user_name          | user_id, session_id, query_user_name             | count, [user_list], status                                                                                                                                  | user_list 内含 user_id                                                                                                                        |
-|   ×   | add_friend                          | user_id, session_id, friend_user_id, friend_note | status                                                                                                                                                      | friend_note 如果为空串则后端自动设为 friend_user_name, status = 成功添加 or 用户不存在 or 已是好友                                            |
+|   √   | add_friend                          | user_id, session_id, friend_user_id, friend_note | status                                                                                                                                                      | friend_note 如果为空串则后端自动设为 friend_user_name, status = 成功添加 or 用户不存在 or 已是好友                                            |
 |   ×   | send_friend_request                 | user_id, session_id, friend_user_id, msg_content | status                                                                                                                                                      | status = 成功发送请求 or 用户不存在 or 已是好友                                                                                               |
-|   ×   | remove_friend                       | user_id, session_id, friend_user_id              | status                                                                                                                                                      | 删除会自动删除双方 travel 的关联                                                                                                              |
+|   √   | remove_friend                       | user_id, session_id, friend_user_id              | status                                                                                                                                                      | 删除会自动删除双方 travel 的关联                                                                                                              |
 |   √   | get_friend_list                     | user_id, session_id                              | count, [friend_list], status                                                                                                                                | friend_list 内含好友 user_id                                                                                                                  |
 |   √   | set_friend_note                     | user_id, session_id, friend_user_id, friend_note | status                                                                                                                                                      | friend_note 如果为空串则后端自动设为 friend_user_name                                                                                         |
 |   √   | get_friend_user_info                | user_id, session_id, friend_user_id              | user_id, user_name, gender, resident_city_id, comment, avatar_url, friend_note, status                                                                      |                                                                                                                                               |
