--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -17,10 +17,10 @@
 |   √   | set_user_info       | user_id, session_id, user_name, email, gender, resident_city_id, comment | status                                                                                                            |                                                                                                                       |
 |   √   | set_user_avatar_url | user_id, session_id, avatar_url                                          | status                                                                                                            |                                                                                                                       |
 |   √   | reset_password      | user_id, session_id, old_pswd_hash, new_pswd_hash                        | status                                                                                                            |                                                                                                                       |
-|   ×   | get_friend_msg      | user_id, session_id                                                      | count, [friend_msg_list: {friend_msg_id, friend_user_id, msg_type, msg_content}], status                          | 返回用户所有的好友消息（加好友/删好友）, msg_type in ['A', 'D']                                                       |
-|   ×   | del_friend_msg      | user_id, session_id, friend_msg_id                                       | status                                                                                                            | 删除用户处理过的好友消息，如果同意添加好友则需同时调用 add_friend                                                     |
-|   ×   | get_travel_msg      | user_id, session_id                                                      | count, [travel_msg_list: {travel_msg_id, friend_user_id, friend_travel_id, msg_type, msg_content}], status        | 返回用户所有的行程关联消息（邀请加入行程/加入行程/离开行程/修改行程/删除行程）, msg_type in ['I', 'A', 'L', 'M', 'D'] |
-|   ×   | del_travel_msg      | user_id, session_id, travel_msg_id                                       | status                                                                                                            | 删除用户处理过的行程关联消息，如果同意加入好友的旅行则需同时调用 join_friends_travel                                  |
+|   √   | get_friend_msg_list | user_id, session_id                                                      | count, [friend_msg_list: {msg_id, user_id, friend_user_id, msg_type, msg_content}], status                        | 返回用户所有的好友消息（加好友/删好友）, msg_type in ['A', 'D']                                                       |
+|   √   | del_friend_msg      | user_id, session_id, msg_id                                              | status                                                                                                            | 删除用户处理过的好友消息，如果同意添加好友则需同时调用 add_friend                                                     |
+|   √   | get_travel_msg_list | user_id, session_id                                                      | count, [travel_msg_list: {msg_id, user_id, friend_user_id, friend_travel_id, msg_type, msg_content}], status      | 返回用户所有的行程关联消息（邀请加入行程/加入行程/离开行程/修改行程/删除行程）, msg_type in ['I', 'A', 'L', 'M', 'D'] |
+|   √   | del_travel_msg      | user_id, session_id, msg_id                                              | status                                                                                                            | 删除用户处理过的行程关联消息，如果同意加入好友的旅行则需同时调用 join_friends_travel                                  |
 + 注：用户每次操作后台会更新用户的 `last_action_time`，若用户连续10分钟无操作，即前端连续10分钟未访问除 city 外的 api，则后台自动删除用户 session，若10分钟后再次访问接口则会 raise UserSessionTimeoutException
 
 ---
@@ -46,7 +46,7 @@
 |   √   | remove_travel                | user_id, session_id, travel_group_id, travel_id                                                | status                                                                                                                                                      | 删除 travel 会自动通知关联好友                                            |
 |   √   | move_travel                  | user_id, session_id, travel_group_id, travel_id, other_travel_group_id                         | status                                                                                                                                                      |                                                                           |
 |   ×   | invite_travel_company        | user_id, session_id, travel_id, friend_user_id                                                 | status                                                                                                                                                      | 向好友发送邀请请求                                                        |
-|   ×   | join_friends_travel          | user_id, session_id, friend_travel_id, friend_user_id                                          | status                                                                                                                                                      | 加入好友的旅行                                                            |
+|   ×   | join_friends_travel          | user_id, session_id, friend_user_id, friend_travel_id                                          | status                                                                                                                                                      | 加入好友的旅行                                                            |
 |   ×   | remove_travel_company        | user_id, session_id, travel_id, friend_user_id                                                 | status                                                                                                                                                      |                                                                           |
 |   ×   | get_travel_company_list      | user_id, session_id, travel_id                                                                 | count, [company_list], status                                                                                                                               | company_list 内含好友 user_id                                             |
 + 注：这里的接口设计逻辑是只允许添加空的 travel_group 和空的 travel，返回一个有效的 travel_group_id 和 travel_id，再进行设置参数
