feat: add api invite_travel_company

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -45,7 +45,7 @@
 |   √   | add_travel                   | user_id, session_id, travel_group_id, city_id, date_start, date_end, visibility, travel_note   | travel_id, status                                                                                                                                           |                                                                           |
 |   √   | remove_travel                | user_id, session_id, travel_group_id, travel_id                                                | status                                                                                                                                                      | 删除 travel 会自动通知关联好友                                            |
 |   √   | move_travel                  | user_id, session_id, travel_group_id, travel_id, other_travel_group_id                         | status                                                                                                                                                      |                                                                           |
-|   ×   | invite_travel_company        | user_id, session_id, travel_id, friend_user_id                                                 | status                                                                                                                                                      | 向好友发送邀请请求                                                        |
+|   √   | invite_travel_company        | user_id, session_id, travel_id, friend_user_id                                                 | status                                                                                                                                                      | 向好友发送邀请请求                                                        |
 |   ×   | join_friends_travel          | user_id, session_id, friend_user_id, friend_travel_id                                          | status                                                                                                                                                      | 加入好友的旅行                                                            |
 |   ×   | remove_travel_company        | user_id, session_id, travel_id, friend_user_id                                                 | status                                                                                                                                                      |                                                                           |
 |   ×   | get_travel_company_list      | user_id, session_id, travel_id                                                                 | count, [company_list], status                                                                                                                               | company_list 内含好友 user_id                                             |
