feat: add api remove_travel_company

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -47,7 +47,7 @@
 |   √   | move_travel                  | user_id, session_id, travel_group_id, travel_id, other_travel_group_id                         | status                                                                                                                                                      |                                                                           |
 |   √   | invite_travel_company        | user_id, session_id, travel_id, friend_user_id                                                 | status                                                                                                                                                      | 向好友发送邀请请求                                                        |
 |   √   | join_friends_travel          | user_id, session_id, friend_user_id, friend_travel_id                                          | status                                                                                                                                                      | 加入好友的旅行                                                            |
-|   ×   | remove_travel_company        | user_id, session_id, travel_id, friend_user_id                                                 | status                                                                                                                                                      |                                                                           |
+|   √   | remove_travel_company        | user_id, session_id, travel_id, friend_user_id                                                 | status                                                                                                                                                      |                                                                           |
 |   ×   | get_travel_company_list      | user_id, session_id, travel_id                                                                 | count, [company_list], status                                                                                                                               | company_list 内含好友 user_id                                             |
 + 注：这里的接口设计逻辑是只允许添加空的 travel_group 和空的 travel，返回一个有效的 travel_group_id 和 travel_id，再进行设置参数
 
