feat: add api recommend_city_list_by_travel_group

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -95,6 +95,6 @@
 |   ×   | copy_friend_travel                  | user_id, session_id, travel_id       | new_travel_id, status                                                                              | travel_id 所有者若不是好友则返回错误代码 |
 |   √   | recommend_friend_list               | user_id, session_id                  | count, [user_list], status                                                                         |
 |   √   | recommend_city_list_by_travel       | user_id, session_id, travel_id       | count, [city_list: {city_id, country_name, province_name, city_name, latitude, longitude}], status |                                          |
-|   ×   | recommend_city_list_by_travel_group | user_id, session_id, travel_group_id | count, [city_list: {city_id, country_name, province_name, city_name, latitude, longitude}], status |                                          |
+|   √   | recommend_city_list_by_travel_group | user_id, session_id, travel_group_id | count, [city_list: {city_id, country_name, province_name, city_name, latitude, longitude}], status |                                          |
 |   ×   | recommend_travel_list_by_travel     | user_id, session_id, travel_id       | count, [travel_list], status                                                                       |                                          |
 |   ×   | recommend_travel_by_travel_group    | user_id, session_id, travel_group_id | count, [travel_list], status                                                                       |                                          |
