feat: add api copy_travel

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -90,11 +90,11 @@
 ---
 
 ## 推荐系统接口
-| 进度  | 接口名称                              | 输入参数                             | 输出参数                                                                                           | 备注                                     |
-| :---: | :------------------------------------ | :----------------------------------- | :------------------------------------------------------------------------------------------------- | :--------------------------------------- |
-|   ×   | copy_friend_travel                    | user_id, session_id, travel_id       | new_travel_id, status                                                                              | travel_id 所有者若不是好友则返回错误代码 |
-|   √   | recommend_friend_list                 | user_id, session_id                  | count, [user_list], status                                                                         |
-|   √   | recommend_city_list_by_travel         | user_id, session_id, travel_id       | count, [city_list: {city_id, country_name, province_name, city_name, latitude, longitude}], status |                                          |
-|   √   | recommend_city_list_by_travel_group   | user_id, session_id, travel_group_id | count, [city_list: {city_id, country_name, province_name, city_name, latitude, longitude}], status |                                          |
-|   √   | recommend_travel_list_by_travel       | user_id, session_id, travel_id       | count, [travel_list], status                                                                       |                                          |
-|   √   | recommend_travel_list_by_travel_group | user_id, session_id, travel_group_id | count, [travel_list], status                                                                       |                                          |
+| 进度  | 接口名称                              | 输入参数                                                                | 输出参数                                                                                           | 备注                                                                                                                                                                                                                     |
+| :---: | :------------------------------------ | :---------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+|   √   | copy_travel                           | user_id, session_id, travel_group_id, source_travel_id, add_association | new_travel_id, status                                                                              | 复制 src_travel 除关联用户外的所有设置并加入自己的 travel_group，若 user 已关联 travel 且 add_association 为真，则自动将 travel 的所有者加入 new_travel，travel 的所有者可以为任意用户（自己好友陌生人）但必须有权限访问 |
+|   √   | recommend_friend_list                 | user_id, session_id                                                     | count, [user_list], status                                                                         |
+|   √   | recommend_city_list_by_travel         | user_id, session_id, travel_id                                          | count, [city_list: {city_id, country_name, province_name, city_name, latitude, longitude}], status |                                                                                                                                                                                                                          |
+|   √   | recommend_city_list_by_travel_group   | user_id, session_id, travel_group_id                                    | count, [city_list: {city_id, country_name, province_name, city_name, latitude, longitude}], status |                                                                                                                                                                                                                          |
+|   √   | recommend_travel_list_by_travel       | user_id, session_id, travel_id                                          | count, [travel_list], status                                                                       |                                                                                                                                                                                                                          |
+|   √   | recommend_travel_list_by_travel_group | user_id, session_id, travel_group_id                                    | count, [travel_list], status                                                                       |                                                                                                                                                                                                                          |
