feat: add api get_user_by_email

--- a/doc/后端接口概览.md
+++ b/doc/后端接口概览.md
@@ -69,7 +69,7 @@
 
 | 进度  | 接口名称                            | 输入参数                                          | 输出参数                                                                                                                                                    | 备注                                                                                                                                            |
 | :---: | :---------------------------------- | :------------------------------------------------ | :---------------------------------------------------------------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------- |
-|   ×   | get_user_list_by_email              | user_id, session_id, query_email                  | count, [user_list], status                                                                                                                                  | user_list 内含 user_id                                                                                                                          |
+|   √   | get_user_by_email                   | user_id, session_id, query_email                  | target_user_id, status                     status = 成功 or 用户不存在                                                                                      |                                                                                                                                                 |
 |   ×   | get_user_list_by_user_name          | user_id, session_id, query_user_name              | count, [user_list], status                                                                                                                                  | user_list 内含 user_id                                                                                                                          |
 |   √   | add_friend                          | user_id, session_id, friend_user_id, friend_note  | status                                                                                                                                                      | friend_note 如果为空串则后端自动设为 friend_user_name, status = 成功添加 or 用户不存在 or 已是好友                                              |
 |   √   | send_friend_request                 | user_id, session_id, others_user_id, request_note | status                                                                                                                                                      | status = 成功发送请求 or 用户不存在 or 已是好友                                                                                                 |
